# micro-manager

./: .travis.yml  appveyor.yml
DeviceAdapters/: Makefile.am  configure.ac
DeviceAdapters/IIDC/: MMIIDCCamera.cpp
DeviceAdapters/PyCH/: Makefile.am  PyCH.cpp  PyCH.h  PyCH.vcxproj
